# snake_eyes_api_tests

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tests/: config.py  ping_test.py  roll_dice_test.py  roll_statistic_test.py
